--- a/homework/homework2/case_study/index.html
+++ b/homework/homework2/case_study/index.html
@@ -8,20 +8,22 @@
 <body>
 <div id="wrapper">
   <header>
-    <h1>Pacific Trails Resort</h1>
+    <h1><a href="index.html">Pacific Trails Resort</a></h1>
   </header>
   <nav>
-    <a href="index.html">Home</a> &nbsp; 
-    <a href="yurts.html">Yurts</a> &nbsp; 
-    <a href="activities.html">Activities</a> &nbsp; 
-    <a href="reservations.html">Reservations</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="yurts.html">Yurts</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+    </ul>
   </nav>
   <div id="homehero">
   </div>
   <main>
     <h2>Enjoy Nature in Luxury</h2>
     <p><span class="resort">Pacific Trails Resort</span> on the California North Coast offers panoramic views of the Pacific Ocean.
-Our guests experience an opulent camping adventure in sumptuously appointed private yurts 
+Our guests experience an opulent camping adventure in sumptuously appointed private yurts
 featuring a gas fireplace, king-size bed, and private deck.
     </p>
     <ul>
