--- a/project/src/index.html
+++ b/project/src/index.html
@@ -1,3 +1,89 @@
-<div class="container mx-auto max-w-screen-xl">
-    placeholder
+<div class="hero">
+    <div class="bg-black bg-opacity-20 border-b-4 border-b-sky-400">
+        <div class="container-lg
+                    text-white px-4 pb-10 md:pb-40 py-40
+                    max-w-screen-md space-y-5">
+            <h1 class="text-5xl flex flex-row">
+                <p><img src="dependencies/icons/clear-day.svg" class="invert mr-2 inline-block">Solar is the future</p>
+            </h1>
+            <p class="text-xl">The sustainable energy solution that pays itself back. Invest in low cost solar for your home or business. Earn tax credits for new panel and battery installations.</p>
+            <div class="flex">
+                <a href="benefits.html">
+                    <p class="button">Learn More</p>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-lg space-y-6">
+    <div class="grid grid-cols-1 md:grid-cols-3 space-x-2 py-14">
+{% capture features %}
+local-shipping
+shipping icon
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+---
+verified
+warranty icon
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+---
+history
+clock icon
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+{% endcapture %}
+{% assign features = features | strip | split: '---' %}
+        {% for feature in features %}
+            {% assign lines = feature | strip | split: newline %}
+            <div class="p-4">
+                <img src="dependencies/icons/{{ lines[0] | strip }}.svg" alt="{{ lines[1] }}">
+                <h2 class="text-xl">{{ lines[2] }}</h2>
+                <p>{{ lines[3] }}</p>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+<div class="container-lg space-y-6">
+{% capture features %}
+solar-house.jpg
+solar field
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+index.html
+Lorem ipsum dolor
+---
+solar-array.jpg
+solar field
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+index.html
+Lorem ipsum dolor
+---
+solar-roof.jpg
+solar field
+Lorem ipsum
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+index.html
+Lorem ipsum dolor
+---
+{% endcapture %}
+    {% assign features = features | strip | split: '---' %}
+    {% for feature in features %}
+        {% assign lines = feature | strip | split: newline %}
+        <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="p-4{% cycle '', ' md:order-last' %}">
+                <img src="dependencies/images/{{ lines[0] | strip }}" alt="{{ lines[1] }}" class="rounded-md aspect-video">
+            </div>
+            <div class="p-4 space-y-2">
+                <h2 class="text-xl">{{ lines[2] }}</h2>
+                <p>{{ lines[3] }}</p>
+                <div class="flex">
+                    <a href="{{ lines[4] }}">
+                        <p class="button text-white">{{ lines[5] }}</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 </div>
