fixes, templates, placeholder pages

--- a/project/src/index.html
+++ b/project/src/index.html
@@ -1,42 +1,32 @@
-<div class="hero">
-    <div class="bg-black bg-opacity-20 border-b-4 border-b-sky-400">
-        <div class="container-lg
-                    text-white px-4 pb-10 md:pb-40 py-40
-                    max-w-screen-md space-y-5">
-            <h1 class="text-5xl flex flex-row">
-                <p><img src="dependencies/icons/clear-day.svg" class="invert mr-2 inline-block">Solar is the future</p>
-            </h1>
-            <p class="text-xl">The sustainable energy solution that pays itself back. Invest in low cost solar for your home or business. Earn tax credits for new panel and battery installations.</p>
-            <div class="flex">
-                <a href="benefits.html">
-                    <p class="button">Learn More</p>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
+{% render "hero.liquid"
+    class: "home",
+    heading: '<img src="dependencies/icons/clear-day.svg" class="invert mr-2 inline-block">Solar is the future',
+    body: "The sustainable energy solution that pays itself back. Invest in low cost solar for your home or business. Earn tax credits for new panel and battery installations.",
+    link: "benefits.html",
+    button: "Learn More"
+%}
 <div class="container-lg space-y-6">
     <div class="grid grid-cols-1 md:grid-cols-3 space-x-2 py-14">
 {% capture features %}
 local-shipping
 shipping icon
-Lorem ipsum
+Free Installation
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
 ---
 verified
 warranty icon
-Lorem ipsum
+10 Year Warranty
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
 ---
 history
 clock icon
-Lorem ipsum
+24/7 Support
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
 {% endcapture %}
 {% assign features = features | strip | split: '---' %}
         {% for feature in features %}
             {% assign lines = feature | strip | split: newline %}
-            <div class="p-4">
+            <div class="p-4 space-y-2">
                 <img src="dependencies/icons/{{ lines[0] | strip }}.svg" alt="{{ lines[1] }}">
                 <h2 class="text-xl">{{ lines[2] }}</h2>
                 <p>{{ lines[3] }}</p>
@@ -49,21 +39,21 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem qu
 solar-house.jpg
 solar field
 Lorem ipsum
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis accusantium maxime excepturi quibusdam dicta qui laudantium nemo, autem ducimus nam explicabo.
 index.html
 Lorem ipsum dolor
 ---
 solar-array.jpg
 solar field
 Lorem ipsum
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis accusantium maxime excepturi quibusdam dicta qui laudantium nemo, autem ducimus nam explicabo.
 index.html
 Lorem ipsum dolor
 ---
 solar-roof.jpg
 solar field
 Lorem ipsum
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem quibusdam nobis tenetur rerum dignissimos.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis accusantium maxime excepturi quibusdam dicta qui laudantium nemo, autem ducimus nam explicabo.
 index.html
 Lorem ipsum dolor
 ---
@@ -73,14 +63,18 @@ Lorem ipsum dolor
         {% assign lines = feature | strip | split: newline %}
         <div class="grid grid-cols-1 md:grid-cols-2">
             <div class="p-4{% cycle '', ' md:order-last' %}">
-                <img src="dependencies/images/{{ lines[0] | strip }}" alt="{{ lines[1] }}" class="rounded-md aspect-video">
+                <div class="relative">
+                    <img src="dependencies/images/{{ lines[0] | strip }}" alt="{{ lines[1] }}" class="rounded-md aspect-video">
+                    <span class="bg-sky-400 rounded-md -z-10
+                                 absolute top-2 left-2  w-full h-full"></span>
+                </div>
             </div>
             <div class="p-4 space-y-2">
                 <h2 class="text-xl">{{ lines[2] }}</h2>
                 <p>{{ lines[3] }}</p>
                 <div class="flex">
                     <a href="{{ lines[4] }}">
-                        <p class="button text-white">{{ lines[5] }}</p>
+                        <p class="button">{{ lines[5] }}</p>
                     </a>
                 </div>
             </div>
