--- a/project/src/index.html
+++ b/project/src/index.html
@@ -1,10 +1,6 @@
-{% capture heading %}
-<img src="dependencies/icons/clear-day.svg" class="invert mr-2 inline-block">Solar is the future
-{% endcapture %}
-{% assign heading = heading | strip %}
 {% render "hero.liquid"
     class: "home",
-    heading: heading,
+    heading: "Solar is the future",
     body: "The sustainable energy solution that pays itself back. Invest in low cost solar for your home or business. Earn tax credits for new panel and battery installations.",
     link: "benefits.html",
     button: "Learn More"
