--- a/project/src/storage.html
+++ b/project/src/storage.html
@@ -1,9 +1,5 @@
-{% capture heading %}
-<img src="dependencies/icons/charging-station.svg" class="invert mr-2 inline-block">Lorem ipsum dolor sit
-{% endcapture %}
-{% assign heading = heading | strip %}
 {% render "hero.liquid"
     class: "storage",
-    heading: heading,
-    body: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus rerum tempore delectus repudiandae quas autem quia ut, molestias voluptatibus."
+    heading: "The power of the sun, all day",
+    body: "Power your home or business, even after the sun goes down."
 %}
