--- a/project/src/solar.html
+++ b/project/src/solar.html
@@ -1,11 +1,7 @@
-{% capture heading %}
-<img src="dependencies/icons/solar-panel.svg" class="invert mr-2 inline-block">Lorem ipsum dolor sit
-{% endcapture %}
-{% assign heading = heading | strip %}
 {% render "hero.liquid"
     class: "solar",
-    heading: heading,
-    body: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus rerum tempore delectus repudiandae quas autem quia ut, molestias voluptatibus."
+    heading: "Solar has never been more affordable",
+    body: "Save even more with government tax credits."
 %}
 <div class="container-lg space-y-6 mt-6">
     {% assign rate = 1 | minus: data.solar.tax-credit %}
@@ -18,7 +14,7 @@
                                  absolute top-2 left-2 w-full h-full"></span>
                 </div>
             </div>
-            <div class="p-4 space-y-1">
+            <div class="p-4 space-y-2">
                 <h2 class="text-3xl">{{ item.heading }}</h2>
                 <span class="flex flex-row space-x-2">
                     <p class="text-2xl">${{ item.cost | times: rate | floor }}</p>
