--- a/project/src/storage.html
+++ b/project/src/storage.html
@@ -3,3 +3,32 @@
     heading: "The power of the sun, all day",
     body: "Power your home or business, even after the sun goes down."
 %}
+<div class="container-lg space-y-6 mt-6">
+    {% for item in data.storage.items %}
+        <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="p-4">
+                <div class="relative">
+                    <img src="dependencies/images/{{ item.image }}" alt="{{ item.alt }}" class="rounded-md aspect-video">
+                    <span class="bg-sky-400 rounded-md -z-10
+                                 absolute top-2 left-2 w-full h-full"></span>
+                </div>
+            </div>
+            <div class="p-4 space-y-2">
+                <h2 class="text-3xl">{{ item.heading }}</h2>
+                <span class="flex flex-row space-x-2">
+                    <p class="text-2xl">${{ item.cost }}</p>
+                    <p class="line-through text-red-400">${{ item.cost }}</p>
+                </span>
+                {% assign stars = 0 | rand: 3, 5 %}
+                {% assign not = 5 | minus: stars %}
+                <p class="text-yellow-400 text-lg">{{ '★' | repeat: stars }}{{ '☆' | repeat: not }}</p>
+                <p>{{ item.body }}</p>
+                <div class="flex">
+                    <a href="{{ item.link }}">
+                        <p class="button">{{ item.button }}</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
